# LABORATORIO-2

./: sesion2.py
laboratorio2_ia/: pyproject.toml  requirements.txt
laboratorio2_ia/src/: loader.py  main.py  transform.py
