[tool.poetry]
name = "laboratorio2-ia"
version = "0.1.0"
description = "Laboratorio de IA"
authors = ["Jesús Andrés <jramosalc@ucvvirtual.edu.pe>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "*"
numpy = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"